// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCard renders empty hero card when blog list is undefined 1`] = `<div />`;

exports[`HeroCard renders full hero card 1`] = `
<React.Fragment>
  <section
    className="jsx-3076843137"
  >
    <NextLink
      ariaLabel="My First Blog Post"
      as="/blog/my-first-blog"
      href="/blog/[...slug]"
    >
      <article
        className="jsx-3076843137"
      >
        <div
          className="jsx-3076843137 blog-card-image"
        >
          <Picture
            image={
              Object {
                "_meta": Object {
                  "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                  "name": "bag-image",
                  "schema": "https://schema.localhost.com/image.json",
                },
                "altText": "crotch bags",
                "image": Object {
                  "_meta": Object {
                    "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                  },
                  "defaultHost": "i1.adis.ws",
                  "endpoint": "blogltd",
                  "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                  "name": "friends-shopping-bags",
                },
              }
            }
            sources={
              Array [
                Object {
                  "di": Object {
                    "h": 403,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 330,
                  },
                  "media": "(min-width: 728px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 728,
                  },
                  "media": "(min-width: 528px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 528,
                  },
                  "media": "(min-width: 415px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 414,
                  },
                },
              ]
            }
          />
        </div>
        <div
          className="jsx-3076843137 blog-card-content"
        >
          <h1
            className="jsx-3076843137"
          >
            <Highlight
              attribute="title"
              hit={
                Object {
                  "_meta": Object {
                    "deliveryId": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                    "deliveryKey": "my-first-blog",
                    "name": "blog-post",
                    "schema": "https://schema.localhost.com/blog-post.json",
                  },
                  "authors": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                        "name": "blog-author",
                        "schema": "https://schema.localhost.com/author.json",
                      },
                      "avatar": Object {
                        "_meta": Object {
                          "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                          "name": "blog-avatar",
                          "schema": "https://schema.localhost.com/image.json",
                        },
                        "altText": "The dashing Sir Blog avatar",
                        "image": Object {
                          "_meta": Object {
                            "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                          },
                          "defaultHost": "i1.adis.ws",
                          "endpoint": "blogltd",
                          "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                          "name": "man-business-suit",
                        },
                      },
                      "name": "Sir Blog",
                    },
                  ],
                  "content": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "a61f458e-7c22-4b5b-9b3d-962df3cbcdcd",
                        "name": "casual-crotch-shot",
                        "schema": "https://schema.localhost.com/image.json",
                      },
                      "altText": "Alt text",
                      "image": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "e1b511d2-1a33-47e7-8dc7-f460534cb0c7",
                        "name": "casual-wear",
                      },
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "f08432cd-525f-4e50-ab34-3316081f48bd",
                        "name": "my-first-blog-text",
                        "schema": "https://schema.localhost.com/text.json",
                      },
                      "text": "# This is my first Blog

## Look-a-header 2

### Look-a-header 3

#### Look-a-header 4

##### Look-a-header 5

###### Look-a-header 6

_**This**_ _is_ _some_ ~~sample~~ **text**.

![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \\"Logo Title Text 1\\")

This is some more sample text with a [LINK](http://bbc.co.uk)

> Comments are cool!
> 
> See what I mean

Look some code:

\`\`\`javascript
const something = 'anything';
calls(something);

\`\`\`

inline \`code\` is awesome underlined

* * *

<h4>A title</h4>

A table too:

| Hello | world | table |
| --- | --- | --- |
| some | values | here |
| some | values | here |
| some | values | here |
| some | values | here |

Get listed

*   Item One
*   Item Two
*   Item Three",
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "ad568b60-fd02-4302-9ccc-9e35dac24255",
                        "name": "my-first-blog-video",
                        "schema": "https://schema.localhost.com/video.json",
                      },
                      "srcSet": Array [],
                      "video": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/video-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "721044de-d125-4a1a-8ddc-2201b9463f2d",
                        "name": "SampleVideo_1280x720_5mb",
                      },
                    },
                  ],
                  "date": "August 07, 2019",
                  "deliveryKey": "test-delivery-key",
                  "description": "Some text for the description that explains this blog post",
                  "id": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                  "image": Object {
                    "_meta": Object {
                      "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                      "name": "bag-image",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "crotch bags",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                      "name": "friends-shopping-bags",
                    },
                  },
                  "readTime": 12,
                  "tags": Array [
                    "sir blog",
                    "you're it",
                    "No tiggy backs",
                  ],
                  "title": "My First Blog Post",
                }
              }
              tagName="mark"
            />
          </h1>
          <BlogCardMeta
            authors={
              Array [
                Object {
                  "_meta": Object {
                    "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                    "name": "blog-author",
                    "schema": "https://schema.localhost.com/author.json",
                  },
                  "avatar": Object {
                    "_meta": Object {
                      "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                      "name": "blog-avatar",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "The dashing Sir Blog avatar",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                      "name": "man-business-suit",
                    },
                  },
                  "name": "Sir Blog",
                },
              ]
            }
            publishedDate="August 07, 2019"
            readTime={12}
          />
          <p
            className="jsx-3076843137"
          >
            <Highlight
              attribute="description"
              hit={
                Object {
                  "_meta": Object {
                    "deliveryId": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                    "deliveryKey": "my-first-blog",
                    "name": "blog-post",
                    "schema": "https://schema.localhost.com/blog-post.json",
                  },
                  "authors": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                        "name": "blog-author",
                        "schema": "https://schema.localhost.com/author.json",
                      },
                      "avatar": Object {
                        "_meta": Object {
                          "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                          "name": "blog-avatar",
                          "schema": "https://schema.localhost.com/image.json",
                        },
                        "altText": "The dashing Sir Blog avatar",
                        "image": Object {
                          "_meta": Object {
                            "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                          },
                          "defaultHost": "i1.adis.ws",
                          "endpoint": "blogltd",
                          "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                          "name": "man-business-suit",
                        },
                      },
                      "name": "Sir Blog",
                    },
                  ],
                  "content": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "a61f458e-7c22-4b5b-9b3d-962df3cbcdcd",
                        "name": "casual-crotch-shot",
                        "schema": "https://schema.localhost.com/image.json",
                      },
                      "altText": "Alt text",
                      "image": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "e1b511d2-1a33-47e7-8dc7-f460534cb0c7",
                        "name": "casual-wear",
                      },
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "f08432cd-525f-4e50-ab34-3316081f48bd",
                        "name": "my-first-blog-text",
                        "schema": "https://schema.localhost.com/text.json",
                      },
                      "text": "# This is my first Blog

## Look-a-header 2

### Look-a-header 3

#### Look-a-header 4

##### Look-a-header 5

###### Look-a-header 6

_**This**_ _is_ _some_ ~~sample~~ **text**.

![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \\"Logo Title Text 1\\")

This is some more sample text with a [LINK](http://bbc.co.uk)

> Comments are cool!
> 
> See what I mean

Look some code:

\`\`\`javascript
const something = 'anything';
calls(something);

\`\`\`

inline \`code\` is awesome underlined

* * *

<h4>A title</h4>

A table too:

| Hello | world | table |
| --- | --- | --- |
| some | values | here |
| some | values | here |
| some | values | here |
| some | values | here |

Get listed

*   Item One
*   Item Two
*   Item Three",
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "ad568b60-fd02-4302-9ccc-9e35dac24255",
                        "name": "my-first-blog-video",
                        "schema": "https://schema.localhost.com/video.json",
                      },
                      "srcSet": Array [],
                      "video": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/video-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "721044de-d125-4a1a-8ddc-2201b9463f2d",
                        "name": "SampleVideo_1280x720_5mb",
                      },
                    },
                  ],
                  "date": "August 07, 2019",
                  "deliveryKey": "test-delivery-key",
                  "description": "Some text for the description that explains this blog post",
                  "id": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                  "image": Object {
                    "_meta": Object {
                      "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                      "name": "bag-image",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "crotch bags",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                      "name": "friends-shopping-bags",
                    },
                  },
                  "readTime": 12,
                  "tags": Array [
                    "sir blog",
                    "you're it",
                    "No tiggy backs",
                  ],
                  "title": "My First Blog Post",
                }
              }
              tagName="mark"
            />
          </p>
        </div>
      </article>
    </NextLink>
  </section>
  <JSXStyle
    dynamic={
      Array [
        "1097px",
        "1rem",
        "rgba(0,0,0,0.08)",
        "1.3125rem",
        "#666666",
        "rgba(0,0,0,0.25)",
        "#999999",
        "#999999",
        "3rem",
        "500",
        "#333333",
        "1.125rem",
        "1097px",
        "736px",
        "0.875rem",
        "1.5rem",
        "700",
        "1rem",
        "300",
        "1.5rem",
      ]
    }
    id="1660561060"
  >
    section.__jsx-style-dynamic-selector{margin:auto;margin-top:20px;max-width:1097px;}article.__jsx-style-dynamic-selector{width:31%;-webkit-flex:1 1 0;-ms-flex:1 1 0;flex:1 1 0;font-size:1rem;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;box-shadow:0 20px 15px 2px rgba(0,0,0,0.08);background:white;cursor:pointer;min-height:400px;}p.__jsx-style-dynamic-selector{font-size:1.3125rem;color:#666666;line-height:1.875rem;}article.__jsx-style-dynamic-selector:hover{box-shadow:0 20px 15px 2px rgba(0,0,0,0.25);}article.__jsx-style-dynamic-selector:hover .publish-date{border-color:#999999;}article.__jsx-style-dynamic-selector:hover h1.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector:hover p.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector:hover .card-meta{color:#999999;}.blog-card-image.__jsx-style-dynamic-selector{width:30%;}.blog-card-image.__jsx-style-dynamic-selector img{object-fit:cover;height:100%;width:100%;}.blog-card-content.__jsx-style-dynamic-selector{width:70%;padding:0 20px 0 20px;}h1.__jsx-style-dynamic-selector{line-height:2.8125rem;font-size:3rem;font-weight:500;color:#333333;margin-top:16px;}article.__jsx-style-dynamic-selector .card-meta div{font-size:1.125rem;}article.__jsx-style-dynamic-selector,h1.__jsx-style-dynamic-selector,p.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector .card-meta{-webkit-transition-property:color,box-shadow;transition-property:color,box-shadow;-webkit-transition-duration:0.3s;transition-duration:0.3s;}@media (max-width:1097px){section.__jsx-style-dynamic-selector{max-width:100%;padding:0 20px;margin-bottom:60px;}}@media (max-width:736px){article.__jsx-style-dynamic-selector{font-size:0.875rem;width:100%;-webkit-flex:initial;-ms-flex:initial;flex:initial;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;box-shadow:unset;min-height:unset;}article.__jsx-style-dynamic-selector:hover{box-shadow:unset;}article.__jsx-style-dynamic-selector .card-meta div{font-size:unset;}section.__jsx-style-dynamic-selector{display:block;padding:0 26px;}.blog-card-content.__jsx-style-dynamic-selector{width:100%;}h1.__jsx-style-dynamic-selector{font-size:1.5rem;font-weight:700;line-height:unset;margin:20px 0;}p.__jsx-style-dynamic-selector{font-size:1rem;font-weight:300;line-height:1.5rem;}.blog-card-image.__jsx-style-dynamic-selector{width:unset;}.blog-card-content.__jsx-style-dynamic-selector{width:unset;padding:0 10px 0 10px;}.blog-card-image.__jsx-style-dynamic-selector img{object-fit:cover;height:135px;}}
  </JSXStyle>
</React.Fragment>
`;

exports[`HeroCard renders full hero card with vse query string in link for preview 1`] = `
<React.Fragment>
  <section
    className="jsx-3076843137"
  >
    <NextLink
      ariaLabel="My First Blog Post"
      as="/preview?vse=test-vse.domain&content=8d6943c7-6028-4fac-b45e-57fc63bd032a"
      href="/preview"
    >
      <article
        className="jsx-3076843137"
      >
        <div
          className="jsx-3076843137 blog-card-image"
        >
          <Picture
            image={
              Object {
                "_meta": Object {
                  "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                  "name": "bag-image",
                  "schema": "https://schema.localhost.com/image.json",
                },
                "altText": "crotch bags",
                "image": Object {
                  "_meta": Object {
                    "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                  },
                  "defaultHost": "i1.adis.ws",
                  "endpoint": "blogltd",
                  "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                  "name": "friends-shopping-bags",
                },
              }
            }
            sources={
              Array [
                Object {
                  "di": Object {
                    "h": 403,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 330,
                  },
                  "media": "(min-width: 728px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 728,
                  },
                  "media": "(min-width: 528px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 528,
                  },
                  "media": "(min-width: 415px)",
                },
                Object {
                  "di": Object {
                    "h": 140,
                    "scaleFit": "poi",
                    "sm": "c",
                    "w": 414,
                  },
                },
              ]
            }
          />
        </div>
        <div
          className="jsx-3076843137 blog-card-content"
        >
          <h1
            className="jsx-3076843137"
          >
            <Highlight
              attribute="title"
              hit={
                Object {
                  "_meta": Object {
                    "deliveryId": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                    "deliveryKey": "my-first-blog",
                    "name": "blog-post",
                    "schema": "https://schema.localhost.com/blog-post.json",
                  },
                  "authors": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                        "name": "blog-author",
                        "schema": "https://schema.localhost.com/author.json",
                      },
                      "avatar": Object {
                        "_meta": Object {
                          "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                          "name": "blog-avatar",
                          "schema": "https://schema.localhost.com/image.json",
                        },
                        "altText": "The dashing Sir Blog avatar",
                        "image": Object {
                          "_meta": Object {
                            "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                          },
                          "defaultHost": "i1.adis.ws",
                          "endpoint": "blogltd",
                          "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                          "name": "man-business-suit",
                        },
                      },
                      "name": "Sir Blog",
                    },
                  ],
                  "content": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "a61f458e-7c22-4b5b-9b3d-962df3cbcdcd",
                        "name": "casual-crotch-shot",
                        "schema": "https://schema.localhost.com/image.json",
                      },
                      "altText": "Alt text",
                      "image": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "e1b511d2-1a33-47e7-8dc7-f460534cb0c7",
                        "name": "casual-wear",
                      },
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "f08432cd-525f-4e50-ab34-3316081f48bd",
                        "name": "my-first-blog-text",
                        "schema": "https://schema.localhost.com/text.json",
                      },
                      "text": "# This is my first Blog

## Look-a-header 2

### Look-a-header 3

#### Look-a-header 4

##### Look-a-header 5

###### Look-a-header 6

_**This**_ _is_ _some_ ~~sample~~ **text**.

![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \\"Logo Title Text 1\\")

This is some more sample text with a [LINK](http://bbc.co.uk)

> Comments are cool!
> 
> See what I mean

Look some code:

\`\`\`javascript
const something = 'anything';
calls(something);

\`\`\`

inline \`code\` is awesome underlined

* * *

<h4>A title</h4>

A table too:

| Hello | world | table |
| --- | --- | --- |
| some | values | here |
| some | values | here |
| some | values | here |
| some | values | here |

Get listed

*   Item One
*   Item Two
*   Item Three",
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "ad568b60-fd02-4302-9ccc-9e35dac24255",
                        "name": "my-first-blog-video",
                        "schema": "https://schema.localhost.com/video.json",
                      },
                      "srcSet": Array [],
                      "video": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/video-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "721044de-d125-4a1a-8ddc-2201b9463f2d",
                        "name": "SampleVideo_1280x720_5mb",
                      },
                    },
                  ],
                  "date": "August 07, 2019",
                  "deliveryKey": "test-delivery-key",
                  "description": "Some text for the description that explains this blog post",
                  "id": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                  "image": Object {
                    "_meta": Object {
                      "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                      "name": "bag-image",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "crotch bags",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                      "name": "friends-shopping-bags",
                    },
                  },
                  "readTime": 12,
                  "tags": Array [
                    "sir blog",
                    "you're it",
                    "No tiggy backs",
                  ],
                  "title": "My First Blog Post",
                }
              }
              tagName="mark"
            />
          </h1>
          <BlogCardMeta
            authors={
              Array [
                Object {
                  "_meta": Object {
                    "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                    "name": "blog-author",
                    "schema": "https://schema.localhost.com/author.json",
                  },
                  "avatar": Object {
                    "_meta": Object {
                      "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                      "name": "blog-avatar",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "The dashing Sir Blog avatar",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                      "name": "man-business-suit",
                    },
                  },
                  "name": "Sir Blog",
                },
              ]
            }
            publishedDate="August 07, 2019"
            readTime={12}
          />
          <p
            className="jsx-3076843137"
          >
            <Highlight
              attribute="description"
              hit={
                Object {
                  "_meta": Object {
                    "deliveryId": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                    "deliveryKey": "my-first-blog",
                    "name": "blog-post",
                    "schema": "https://schema.localhost.com/blog-post.json",
                  },
                  "authors": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "b1379f67-8934-49cb-94b3-58b679096c2c",
                        "name": "blog-author",
                        "schema": "https://schema.localhost.com/author.json",
                      },
                      "avatar": Object {
                        "_meta": Object {
                          "deliveryId": "9ef5a6d0-5a34-414f-9fd3-1098698c6629",
                          "name": "blog-avatar",
                          "schema": "https://schema.localhost.com/image.json",
                        },
                        "altText": "The dashing Sir Blog avatar",
                        "image": Object {
                          "_meta": Object {
                            "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                          },
                          "defaultHost": "i1.adis.ws",
                          "endpoint": "blogltd",
                          "id": "f9549d3d-f616-487c-b1ad-fad5152f2c7d",
                          "name": "man-business-suit",
                        },
                      },
                      "name": "Sir Blog",
                    },
                  ],
                  "content": Array [
                    Object {
                      "_meta": Object {
                        "deliveryId": "a61f458e-7c22-4b5b-9b3d-962df3cbcdcd",
                        "name": "casual-crotch-shot",
                        "schema": "https://schema.localhost.com/image.json",
                      },
                      "altText": "Alt text",
                      "image": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "e1b511d2-1a33-47e7-8dc7-f460534cb0c7",
                        "name": "casual-wear",
                      },
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "f08432cd-525f-4e50-ab34-3316081f48bd",
                        "name": "my-first-blog-text",
                        "schema": "https://schema.localhost.com/text.json",
                      },
                      "text": "# This is my first Blog

## Look-a-header 2

### Look-a-header 3

#### Look-a-header 4

##### Look-a-header 5

###### Look-a-header 6

_**This**_ _is_ _some_ ~~sample~~ **text**.

![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \\"Logo Title Text 1\\")

This is some more sample text with a [LINK](http://bbc.co.uk)

> Comments are cool!
> 
> See what I mean

Look some code:

\`\`\`javascript
const something = 'anything';
calls(something);

\`\`\`

inline \`code\` is awesome underlined

* * *

<h4>A title</h4>

A table too:

| Hello | world | table |
| --- | --- | --- |
| some | values | here |
| some | values | here |
| some | values | here |
| some | values | here |

Get listed

*   Item One
*   Item Two
*   Item Three",
                    },
                    Object {
                      "_meta": Object {
                        "deliveryId": "ad568b60-fd02-4302-9ccc-9e35dac24255",
                        "name": "my-first-blog-video",
                        "schema": "https://schema.localhost.com/video.json",
                      },
                      "srcSet": Array [],
                      "video": Object {
                        "_meta": Object {
                          "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/video-link",
                        },
                        "defaultHost": "i1.adis.ws",
                        "endpoint": "blogltd",
                        "id": "721044de-d125-4a1a-8ddc-2201b9463f2d",
                        "name": "SampleVideo_1280x720_5mb",
                      },
                    },
                  ],
                  "date": "August 07, 2019",
                  "deliveryKey": "test-delivery-key",
                  "description": "Some text for the description that explains this blog post",
                  "id": "8d6943c7-6028-4fac-b45e-57fc63bd032a",
                  "image": Object {
                    "_meta": Object {
                      "deliveryId": "4b44e870-bf71-43f3-81b3-c46c32f4cde5",
                      "name": "bag-image",
                      "schema": "https://schema.localhost.com/image.json",
                    },
                    "altText": "crotch bags",
                    "image": Object {
                      "_meta": Object {
                        "schema": "http://bigcontent.io/cms/schema/v1/core#/definitions/image-link",
                      },
                      "defaultHost": "i1.adis.ws",
                      "endpoint": "blogltd",
                      "id": "edc77f02-0e92-4b1a-88f9-711cacb5d650",
                      "name": "friends-shopping-bags",
                    },
                  },
                  "readTime": 12,
                  "tags": Array [
                    "sir blog",
                    "you're it",
                    "No tiggy backs",
                  ],
                  "title": "My First Blog Post",
                }
              }
              tagName="mark"
            />
          </p>
        </div>
      </article>
    </NextLink>
  </section>
  <JSXStyle
    dynamic={
      Array [
        "1097px",
        "1rem",
        "rgba(0,0,0,0.08)",
        "1.3125rem",
        "#666666",
        "rgba(0,0,0,0.25)",
        "#999999",
        "#999999",
        "3rem",
        "500",
        "#333333",
        "1.125rem",
        "1097px",
        "736px",
        "0.875rem",
        "1.5rem",
        "700",
        "1rem",
        "300",
        "1.5rem",
      ]
    }
    id="1660561060"
  >
    section.__jsx-style-dynamic-selector{margin:auto;margin-top:20px;max-width:1097px;}article.__jsx-style-dynamic-selector{width:31%;-webkit-flex:1 1 0;-ms-flex:1 1 0;flex:1 1 0;font-size:1rem;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;box-shadow:0 20px 15px 2px rgba(0,0,0,0.08);background:white;cursor:pointer;min-height:400px;}p.__jsx-style-dynamic-selector{font-size:1.3125rem;color:#666666;line-height:1.875rem;}article.__jsx-style-dynamic-selector:hover{box-shadow:0 20px 15px 2px rgba(0,0,0,0.25);}article.__jsx-style-dynamic-selector:hover .publish-date{border-color:#999999;}article.__jsx-style-dynamic-selector:hover h1.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector:hover p.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector:hover .card-meta{color:#999999;}.blog-card-image.__jsx-style-dynamic-selector{width:30%;}.blog-card-image.__jsx-style-dynamic-selector img{object-fit:cover;height:100%;width:100%;}.blog-card-content.__jsx-style-dynamic-selector{width:70%;padding:0 20px 0 20px;}h1.__jsx-style-dynamic-selector{line-height:2.8125rem;font-size:3rem;font-weight:500;color:#333333;margin-top:16px;}article.__jsx-style-dynamic-selector .card-meta div{font-size:1.125rem;}article.__jsx-style-dynamic-selector,h1.__jsx-style-dynamic-selector,p.__jsx-style-dynamic-selector,article.__jsx-style-dynamic-selector .card-meta{-webkit-transition-property:color,box-shadow;transition-property:color,box-shadow;-webkit-transition-duration:0.3s;transition-duration:0.3s;}@media (max-width:1097px){section.__jsx-style-dynamic-selector{max-width:100%;padding:0 20px;margin-bottom:60px;}}@media (max-width:736px){article.__jsx-style-dynamic-selector{font-size:0.875rem;width:100%;-webkit-flex:initial;-ms-flex:initial;flex:initial;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;box-shadow:unset;min-height:unset;}article.__jsx-style-dynamic-selector:hover{box-shadow:unset;}article.__jsx-style-dynamic-selector .card-meta div{font-size:unset;}section.__jsx-style-dynamic-selector{display:block;padding:0 26px;}.blog-card-content.__jsx-style-dynamic-selector{width:100%;}h1.__jsx-style-dynamic-selector{font-size:1.5rem;font-weight:700;line-height:unset;margin:20px 0;}p.__jsx-style-dynamic-selector{font-size:1rem;font-weight:300;line-height:1.5rem;}.blog-card-image.__jsx-style-dynamic-selector{width:unset;}.blog-card-content.__jsx-style-dynamic-selector{width:unset;padding:0 10px 0 10px;}.blog-card-image.__jsx-style-dynamic-selector img{object-fit:cover;height:135px;}}
  </JSXStyle>
</React.Fragment>
`;
